Added type parameters.